# aislopdesk

./: .gitignore  .pre-commit-config.yaml  .shellcheckrc  .swiftlint.yml  CLAUDE.md  LICENSE  Makefile  Package.resolved  Package.swift  README.md  THIRD_PARTY_NOTICES.md
docs/: 00-overview.md  01-architecture.md  02-host-capture-encode.md  03-transport-protocol.md  04-client-decode-render.md  05-input-window-control.md  06-permissions-distribution.md  07-roadmap.md  08-risks-open-questions.md  09-codec-choice.md  10-latency-optimization.md  11-absolute-latency.md  12-coding-profile.md  13-netbird-transport.md  13-network-transport.md  14-claude-code-integration.md  15-prior-art-happy-happier.md  16-readonly-inspector.md  17-native-feel-synthesis.md  18-risk-resolutions.md  19-implementation-plan.md  20-wire-protocol.md  21-HANDOFF.md  22-workspace-architecture.md  23-workspace-ui-handoff.md  24-hardening-handoff.md  25-overnight-handoff.md  26-RESEARCH-OPTIMIZATIONS.md  27-NIGHT-HANDOFF.md  28-NIGHT-HANDOFF.md  29-NIGHT-HANDOFF.md  30-infinite-canvas.md  30-ui-architecture.md  31-TERMINAL-SMOOTHNESS-HANDOFF.md  32-BORDERLESS-CANVAS-UIUX.md  (+14 more)
rust/: Cargo.toml  (+5 more)
rust/aislopdesk-core/: Cargo.toml
rust/aislopdesk-core/src/: adaptive_fec.rs  adaptive_playout.rs  bytes.rs  capture_region.rs  coordinate_mapping.rs  cursor.rs  decode_frontier.rs  decode_gate.rs  decode_sequencer.rs  error.rs  fec.rs  fps_governor.rs  fragment.rs  frame_hash.rs  geometry.rs  host_output_sniffer.rs  idle_reap_decider.rs  input_button_balance.rs  input_event.rs  input_motion_coalescer.rs  input_router.rs  interleaver.rs  keepalive.rs  lib.rs  live_bitrate_policy.rs  live_congestion_controller.rs  ltr_controller.rs  mux_header.rs  nal_unit.rs  network_estimate.rs  owd_late_detector.rs  pacer_depth_policy.rs  qp_controller.rs  reassembler.rs  recovery.rs  recovery_idr_policy.rs  recovery_policy.rs  recovery_request_deduper.rs  recovery_router.rs  scroll_reprojection.rs  (+16 more)
rust/aislopdesk-core/src/host_output_sniffer/: machine.rs  mod.rs  tests.rs
rust/aislopdesk-core/src/live_congestion_controller/: controller.rs  mod.rs  tests.rs
rust/aislopdesk-core/src/terminal/: error.rs  frame_decoder.rs  mod.rs  reader.rs  session.rs  wire_message.rs
rust/aislopdesk-core/src/terminal/mux/: bounded_queue_policy.rs  channel_table.rs  envelope.rs  flow_control.rs  flow_credit_policy.rs  frame_decoder.rs  mod.rs  receive_window_accountant.rs
rust/aislopdesk-core/src/terminal/wire_message/: codec.rs  data_frame_view.rs  mod.rs  tests.rs
rust/aislopdesk-core/src/video_mux_router/: mod.rs  router.rs  tests.rs
rust/aislopdesk-core/src/video_session/: mod.rs  size_negotiation.rs  state_machine.rs  tests.rs
rust/aislopdesk-core/tests/: golden_parity.rs
rust/aislopdesk-core/tests/vectors/: golden_vectors.json
rust/aislopdesk-ffi/: Cargo.toml
rust/aislopdesk-ffi/include/: aislopdesk_ffi.h
rust/aislopdesk-ffi/src/: frame_hash.rs  gf_neon.rs  lib.rs  raw.rs  video.rs
rust/aislopdesk-ffi/src/video/: adaptive_fec.rs  capture_region.rs  coordinate_mapping.rs  cursor.rs  decode_gate.rs  fec.rs  frame_hash.rs  input_button_balance.rs  input_event.rs  live_bitrate_policy.rs  mod.rs  owd_late_detector.rs  pacer_depth_policy.rs  packetizer.rs  reassembler.rs  recovery.rs  recovery_idr_policy.rs  recovery_policy.rs  recovery_request_deduper.rs  scroll_reprojection.rs  scroll_shift.rs  static_idr_decider.rs  system_dialog_detector.rs  video_control.rs  video_mux_router.rs  virtual_display_geometry.rs  window_geometry.rs  window_placement.rs  ycbcr.rs
rust/aislopdesk-ffi/tests/: ffi_boundary.rs  run_c_smoke.sh  smoke.c
(+1701 files in other folders)
