[package]
name = "aislopdesk-core"
version = "0.1.0"
description = "Portable, side-effect-free core of Aislopdesk: wire codecs, FEC, packetizer/reassembler, and realtime controllers. A byte/behaviour-identical Rust port of the Swift pure-algorithm targets, intended for reuse by a future Android client."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
# `cdylib` + `staticlib` are added once the C-ABI surface lands (FFI crate). The pure
# core is a plain `rlib` so it stays dependency-light and quick to test.
crate-type = ["rlib"]

[dependencies]
# Intentionally EMPTY. The core is zero-dependency by policy: 100% safe, auditable,
# minimal Android footprint, no transitive supply-chain surface. Anything that needs
# the OS (sockets, clock, codec) lives above this crate, never inside it.

[dev-dependencies]
# Golden-vector parity tests deserialize JSON corpora emitted by the Swift
# `aislopdesk-corevectors` dumper. Dev-only: never shipped in the Android library.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints]
workspace = true
